[tool.poetry]
name = "nancy-python-wrapper"
version = "0.1.0"
description = ""
authors = ["Raffaele Zippo <raffaele.zippo@outlook.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

